// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Ledger banners · full visual regression matrix (9 sizes × 2 langs) > banner 120x600·en renders with correct size, alt, src, and tracked href 1`] = `
<a
  aria-label="Ledger Nano S Plus — Secure your Bitcoin"
  data-lang="en"
  data-size="120x600"
  href="https://shop.ledger.com/pages/ledger-nano-s-plus/?r=8c4e8e87cac7&utm_source=retirement&utm_medium=affiliate&utm_campaign=ledger&utm_content=pre-footer&aff_sid=retirement__pre-footer&sub1=85291491-4d78-4de3-bf0c-ee9ca742f1d0&s1=85291491-4d78-4de3-bf0c-ee9ca742f1d0&subid=85291491-4d78-4de3-bf0c-ee9ca742f1d0&click_id=85291491-4d78-4de3-bf0c-ee9ca742f1d0"
  rel="sponsored nofollow noopener"
  style="max-width: 120px;"
  target="_blank"
>
  <img
    alt="Ledger Nano S Plus — Secure your Bitcoin"
    height="600"
    src="https://affiliate.ledger.com/image/120/600/Default"
    style="aspect-ratio: 120 / 600;"
    width="120"
  />
</a>
`;

exports[`Ledger banners · full visual regression matrix (9 sizes × 2 langs) > banner 120x600·tr renders with correct size, alt, src, and tracked href 1`] = `
<a
  aria-label="Ledger Nano S Plus — Bitcoin'ini güvene al"
  data-lang="tr"
  data-size="120x600"
  href="https://shop.ledger.com/pages/ledger-nano-s-plus/?r=8c4e8e87cac7&utm_source=retirement&utm_medium=affiliate&utm_campaign=ledger&utm_content=pre-footer&aff_sid=retirement__pre-footer&sub1=6cea79e2-2a0b-48ef-8776-0f74079a8005&s1=6cea79e2-2a0b-48ef-8776-0f74079a8005&subid=6cea79e2-2a0b-48ef-8776-0f74079a8005&click_id=6cea79e2-2a0b-48ef-8776-0f74079a8005"
  rel="sponsored nofollow noopener"
  style="max-width: 120px;"
  target="_blank"
>
  <img
    alt="Ledger Nano S Plus — Bitcoin'ini güvene al"
    height="600"
    src="https://affiliate.ledger.com/image/120/600/Turkish"
    style="aspect-ratio: 120 / 600;"
    width="120"
  />
</a>
`;

exports[`Ledger banners · full visual regression matrix (9 sizes × 2 langs) > banner 160x600·en renders with correct size, alt, src, and tracked href 1`] = `
<a
  aria-label="Ledger Nano S Plus — Secure your Bitcoin"
  data-lang="en"
  data-size="160x600"
  href="https://shop.ledger.com/pages/ledger-nano-s-plus/?r=8c4e8e87cac7&utm_source=retirement&utm_medium=affiliate&utm_campaign=ledger&utm_content=pre-footer&aff_sid=retirement__pre-footer&sub1=07e4b797-5cdb-41d8-944f-77a6a6b74abc&s1=07e4b797-5cdb-41d8-944f-77a6a6b74abc&subid=07e4b797-5cdb-41d8-944f-77a6a6b74abc&click_id=07e4b797-5cdb-41d8-944f-77a6a6b74abc"
  rel="sponsored nofollow noopener"
  style="max-width: 160px;"
  target="_blank"
>
  <img
    alt="Ledger Nano S Plus — Secure your Bitcoin"
    height="600"
    src="https://affiliate.ledger.com/image/160/600/Default"
    style="aspect-ratio: 160 / 600;"
    width="160"
  />
</a>
`;

exports[`Ledger banners · full visual regression matrix (9 sizes × 2 langs) > banner 160x600·tr renders with correct size, alt, src, and tracked href 1`] = `
<a
  aria-label="Ledger Nano S Plus — Bitcoin'ini güvene al"
  data-lang="tr"
  data-size="160x600"
  href="https://shop.ledger.com/pages/ledger-nano-s-plus/?r=8c4e8e87cac7&utm_source=retirement&utm_medium=affiliate&utm_campaign=ledger&utm_content=pre-footer&aff_sid=retirement__pre-footer&sub1=a0ed5404-afef-4c67-9263-e2b8f885455d&s1=a0ed5404-afef-4c67-9263-e2b8f885455d&subid=a0ed5404-afef-4c67-9263-e2b8f885455d&click_id=a0ed5404-afef-4c67-9263-e2b8f885455d"
  rel="sponsored nofollow noopener"
  style="max-width: 160px;"
  target="_blank"
>
  <img
    alt="Ledger Nano S Plus — Bitcoin'ini güvene al"
    height="600"
    src="https://affiliate.ledger.com/image/160/600/Turkish"
    style="aspect-ratio: 160 / 600;"
    width="160"
  />
</a>
`;

exports[`Ledger banners · full visual regression matrix (9 sizes × 2 langs) > banner 250x100·en renders with correct size, alt, src, and tracked href 1`] = `
<a
  aria-label="Ledger Nano S Plus — Secure your Bitcoin"
  data-lang="en"
  data-size="250x100"
  href="https://shop.ledger.com/pages/ledger-nano-s-plus/?r=8c4e8e87cac7&utm_source=retirement&utm_medium=affiliate&utm_campaign=ledger&utm_content=pre-footer&aff_sid=retirement__pre-footer&sub1=5f4f30a7-425e-4569-9276-b1ec464bbca0&s1=5f4f30a7-425e-4569-9276-b1ec464bbca0&subid=5f4f30a7-425e-4569-9276-b1ec464bbca0&click_id=5f4f30a7-425e-4569-9276-b1ec464bbca0"
  rel="sponsored nofollow noopener"
  style="max-width: 250px;"
  target="_blank"
>
  <img
    alt="Ledger Nano S Plus — Secure your Bitcoin"
    height="100"
    src="https://affiliate.ledger.com/image/250/100/Default"
    style="aspect-ratio: 250 / 100;"
    width="250"
  />
</a>
`;

exports[`Ledger banners · full visual regression matrix (9 sizes × 2 langs) > banner 250x100·tr renders with correct size, alt, src, and tracked href 1`] = `
<a
  aria-label="Ledger Nano S Plus — Bitcoin'ini güvene al"
  data-lang="tr"
  data-size="250x100"
  href="https://shop.ledger.com/pages/ledger-nano-s-plus/?r=8c4e8e87cac7&utm_source=retirement&utm_medium=affiliate&utm_campaign=ledger&utm_content=pre-footer&aff_sid=retirement__pre-footer&sub1=17c51ff4-878a-43b7-b9c6-a9dc11db8b59&s1=17c51ff4-878a-43b7-b9c6-a9dc11db8b59&subid=17c51ff4-878a-43b7-b9c6-a9dc11db8b59&click_id=17c51ff4-878a-43b7-b9c6-a9dc11db8b59"
  rel="sponsored nofollow noopener"
  style="max-width: 250px;"
  target="_blank"
>
  <img
    alt="Ledger Nano S Plus — Bitcoin'ini güvene al"
    height="100"
    src="https://affiliate.ledger.com/image/250/100/Turkish"
    style="aspect-ratio: 250 / 100;"
    width="250"
  />
</a>
`;

exports[`Ledger banners · full visual regression matrix (9 sizes × 2 langs) > banner 300x250·en renders with correct size, alt, src, and tracked href 1`] = `
<a
  aria-label="Ledger Nano S Plus — Secure your Bitcoin"
  data-lang="en"
  data-size="300x250"
  href="https://shop.ledger.com/pages/ledger-nano-s-plus/?r=8c4e8e87cac7&utm_source=retirement&utm_medium=affiliate&utm_campaign=ledger&utm_content=pre-footer&aff_sid=retirement__pre-footer&sub1=867c4b21-f27c-4be9-9dd7-80ada9e0f5e7&s1=867c4b21-f27c-4be9-9dd7-80ada9e0f5e7&subid=867c4b21-f27c-4be9-9dd7-80ada9e0f5e7&click_id=867c4b21-f27c-4be9-9dd7-80ada9e0f5e7"
  rel="sponsored nofollow noopener"
  style="max-width: 300px;"
  target="_blank"
>
  <img
    alt="Ledger Nano S Plus — Secure your Bitcoin"
    height="250"
    src="https://affiliate.ledger.com/image/300/250/Default"
    style="aspect-ratio: 300 / 250;"
    width="300"
  />
</a>
`;

exports[`Ledger banners · full visual regression matrix (9 sizes × 2 langs) > banner 300x250·tr renders with correct size, alt, src, and tracked href 1`] = `
<a
  aria-label="Ledger Nano S Plus — Bitcoin'ini güvene al"
  data-lang="tr"
  data-size="300x250"
  href="https://shop.ledger.com/pages/ledger-nano-s-plus/?r=8c4e8e87cac7&utm_source=retirement&utm_medium=affiliate&utm_campaign=ledger&utm_content=pre-footer&aff_sid=retirement__pre-footer&sub1=7ab2462e-8ffd-4ddc-9265-78daa9ca0899&s1=7ab2462e-8ffd-4ddc-9265-78daa9ca0899&subid=7ab2462e-8ffd-4ddc-9265-78daa9ca0899&click_id=7ab2462e-8ffd-4ddc-9265-78daa9ca0899"
  rel="sponsored nofollow noopener"
  style="max-width: 300px;"
  target="_blank"
>
  <img
    alt="Ledger Nano S Plus — Bitcoin'ini güvene al"
    height="250"
    src="https://affiliate.ledger.com/image/300/250/Turkish"
    style="aspect-ratio: 300 / 250;"
    width="300"
  />
</a>
`;

exports[`Ledger banners · full visual regression matrix (9 sizes × 2 langs) > banner 300x600·en renders with correct size, alt, src, and tracked href 1`] = `
<a
  aria-label="Ledger Nano S Plus — Secure your Bitcoin"
  data-lang="en"
  data-size="300x600"
  href="https://shop.ledger.com/pages/ledger-nano-s-plus/?r=8c4e8e87cac7&utm_source=retirement&utm_medium=affiliate&utm_campaign=ledger&utm_content=pre-footer&aff_sid=retirement__pre-footer&sub1=441ba41b-ac8c-449c-97ab-d6ba1b26bba8&s1=441ba41b-ac8c-449c-97ab-d6ba1b26bba8&subid=441ba41b-ac8c-449c-97ab-d6ba1b26bba8&click_id=441ba41b-ac8c-449c-97ab-d6ba1b26bba8"
  rel="sponsored nofollow noopener"
  style="max-width: 300px;"
  target="_blank"
>
  <img
    alt="Ledger Nano S Plus — Secure your Bitcoin"
    height="600"
    src="https://affiliate.ledger.com/image/300/600/Default"
    style="aspect-ratio: 300 / 600;"
    width="300"
  />
</a>
`;

exports[`Ledger banners · full visual regression matrix (9 sizes × 2 langs) > banner 300x600·tr renders with correct size, alt, src, and tracked href 1`] = `
<a
  aria-label="Ledger Nano S Plus — Bitcoin'ini güvene al"
  data-lang="tr"
  data-size="300x600"
  href="https://shop.ledger.com/pages/ledger-nano-s-plus/?r=8c4e8e87cac7&utm_source=retirement&utm_medium=affiliate&utm_campaign=ledger&utm_content=pre-footer&aff_sid=retirement__pre-footer&sub1=d44dc276-31f6-4dc2-b823-c943a1f3fdd0&s1=d44dc276-31f6-4dc2-b823-c943a1f3fdd0&subid=d44dc276-31f6-4dc2-b823-c943a1f3fdd0&click_id=d44dc276-31f6-4dc2-b823-c943a1f3fdd0"
  rel="sponsored nofollow noopener"
  style="max-width: 300px;"
  target="_blank"
>
  <img
    alt="Ledger Nano S Plus — Bitcoin'ini güvene al"
    height="600"
    src="https://affiliate.ledger.com/image/300/600/Turkish"
    style="aspect-ratio: 300 / 600;"
    width="300"
  />
</a>
`;

exports[`Ledger banners · full visual regression matrix (9 sizes × 2 langs) > banner 320x50·en renders with correct size, alt, src, and tracked href 1`] = `
<a
  aria-label="Ledger Nano S Plus — Secure your Bitcoin"
  data-lang="en"
  data-size="320x50"
  href="https://shop.ledger.com/pages/ledger-nano-s-plus/?r=8c4e8e87cac7&utm_source=retirement&utm_medium=affiliate&utm_campaign=ledger&utm_content=pre-footer&aff_sid=retirement__pre-footer&sub1=e2857c05-8c22-4a35-8291-3c7d81b2b1de&s1=e2857c05-8c22-4a35-8291-3c7d81b2b1de&subid=e2857c05-8c22-4a35-8291-3c7d81b2b1de&click_id=e2857c05-8c22-4a35-8291-3c7d81b2b1de"
  rel="sponsored nofollow noopener"
  style="max-width: 320px;"
  target="_blank"
>
  <img
    alt="Ledger Nano S Plus — Secure your Bitcoin"
    height="50"
    src="https://affiliate.ledger.com/image/320/50/Default"
    style="aspect-ratio: 320 / 50;"
    width="320"
  />
</a>
`;

exports[`Ledger banners · full visual regression matrix (9 sizes × 2 langs) > banner 320x50·tr renders with correct size, alt, src, and tracked href 1`] = `
<a
  aria-label="Ledger Nano S Plus — Bitcoin'ini güvene al"
  data-lang="tr"
  data-size="320x50"
  href="https://shop.ledger.com/pages/ledger-nano-s-plus/?r=8c4e8e87cac7&utm_source=retirement&utm_medium=affiliate&utm_campaign=ledger&utm_content=pre-footer&aff_sid=retirement__pre-footer&sub1=276e86e0-3993-4d3f-b512-69f4eb321eca&s1=276e86e0-3993-4d3f-b512-69f4eb321eca&subid=276e86e0-3993-4d3f-b512-69f4eb321eca&click_id=276e86e0-3993-4d3f-b512-69f4eb321eca"
  rel="sponsored nofollow noopener"
  style="max-width: 320px;"
  target="_blank"
>
  <img
    alt="Ledger Nano S Plus — Bitcoin'ini güvene al"
    height="50"
    src="https://affiliate.ledger.com/image/320/50/Turkish"
    style="aspect-ratio: 320 / 50;"
    width="320"
  />
</a>
`;

exports[`Ledger banners · full visual regression matrix (9 sizes × 2 langs) > banner 468x60·en renders with correct size, alt, src, and tracked href 1`] = `
<a
  aria-label="Ledger Nano S Plus — Secure your Bitcoin"
  data-lang="en"
  data-size="468x60"
  href="https://shop.ledger.com/pages/ledger-nano-s-plus/?r=8c4e8e87cac7&utm_source=retirement&utm_medium=affiliate&utm_campaign=ledger&utm_content=pre-footer&aff_sid=retirement__pre-footer&sub1=22aec073-3ae0-4c1e-b116-4d14c0d956ff&s1=22aec073-3ae0-4c1e-b116-4d14c0d956ff&subid=22aec073-3ae0-4c1e-b116-4d14c0d956ff&click_id=22aec073-3ae0-4c1e-b116-4d14c0d956ff"
  rel="sponsored nofollow noopener"
  style="max-width: 468px;"
  target="_blank"
>
  <img
    alt="Ledger Nano S Plus — Secure your Bitcoin"
    height="60"
    src="https://affiliate.ledger.com/image/468/60/Default"
    style="aspect-ratio: 468 / 60;"
    width="468"
  />
</a>
`;

exports[`Ledger banners · full visual regression matrix (9 sizes × 2 langs) > banner 468x60·tr renders with correct size, alt, src, and tracked href 1`] = `
<a
  aria-label="Ledger Nano S Plus — Bitcoin'ini güvene al"
  data-lang="tr"
  data-size="468x60"
  href="https://shop.ledger.com/pages/ledger-nano-s-plus/?r=8c4e8e87cac7&utm_source=retirement&utm_medium=affiliate&utm_campaign=ledger&utm_content=pre-footer&aff_sid=retirement__pre-footer&sub1=5e8fe0e0-cd74-4367-9172-d248d5b55341&s1=5e8fe0e0-cd74-4367-9172-d248d5b55341&subid=5e8fe0e0-cd74-4367-9172-d248d5b55341&click_id=5e8fe0e0-cd74-4367-9172-d248d5b55341"
  rel="sponsored nofollow noopener"
  style="max-width: 468px;"
  target="_blank"
>
  <img
    alt="Ledger Nano S Plus — Bitcoin'ini güvene al"
    height="60"
    src="https://affiliate.ledger.com/image/468/60/Turkish"
    style="aspect-ratio: 468 / 60;"
    width="468"
  />
</a>
`;

exports[`Ledger banners · full visual regression matrix (9 sizes × 2 langs) > banner 728x90·en renders with correct size, alt, src, and tracked href 1`] = `
<a
  aria-label="Ledger Nano S Plus — Secure your Bitcoin"
  data-lang="en"
  data-size="728x90"
  href="https://shop.ledger.com/pages/ledger-nano-s-plus/?r=8c4e8e87cac7&utm_source=retirement&utm_medium=affiliate&utm_campaign=ledger&utm_content=pre-footer&aff_sid=retirement__pre-footer&sub1=2f87b915-b083-4d1f-b806-34a7867117d4&s1=2f87b915-b083-4d1f-b806-34a7867117d4&subid=2f87b915-b083-4d1f-b806-34a7867117d4&click_id=2f87b915-b083-4d1f-b806-34a7867117d4"
  rel="sponsored nofollow noopener"
  style="max-width: 728px;"
  target="_blank"
>
  <img
    alt="Ledger Nano S Plus — Secure your Bitcoin"
    height="90"
    src="https://affiliate.ledger.com/image/728/90/Default"
    style="aspect-ratio: 728 / 90;"
    width="728"
  />
</a>
`;

exports[`Ledger banners · full visual regression matrix (9 sizes × 2 langs) > banner 728x90·tr renders with correct size, alt, src, and tracked href 1`] = `
<a
  aria-label="Ledger Nano S Plus — Bitcoin'ini güvene al"
  data-lang="tr"
  data-size="728x90"
  href="https://shop.ledger.com/pages/ledger-nano-s-plus/?r=8c4e8e87cac7&utm_source=retirement&utm_medium=affiliate&utm_campaign=ledger&utm_content=pre-footer&aff_sid=retirement__pre-footer&sub1=133b9a4d-fc7f-4f93-8a57-c80c495d9edf&s1=133b9a4d-fc7f-4f93-8a57-c80c495d9edf&subid=133b9a4d-fc7f-4f93-8a57-c80c495d9edf&click_id=133b9a4d-fc7f-4f93-8a57-c80c495d9edf"
  rel="sponsored nofollow noopener"
  style="max-width: 728px;"
  target="_blank"
>
  <img
    alt="Ledger Nano S Plus — Bitcoin'ini güvene al"
    height="90"
    src="https://affiliate.ledger.com/image/728/90/Turkish"
    style="aspect-ratio: 728 / 90;"
    width="728"
  />
</a>
`;

exports[`Ledger banners · full visual regression matrix (9 sizes × 2 langs) > banner 850x420·en renders with correct size, alt, src, and tracked href 1`] = `
<a
  aria-label="Ledger Nano S Plus — Secure your Bitcoin"
  data-lang="en"
  data-size="850x420"
  href="https://shop.ledger.com/pages/ledger-nano-s-plus/?r=8c4e8e87cac7&utm_source=retirement&utm_medium=affiliate&utm_campaign=ledger&utm_content=pre-footer&aff_sid=retirement__pre-footer&sub1=d2efd92a-8faf-4ea1-a187-7fb9e2927d3b&s1=d2efd92a-8faf-4ea1-a187-7fb9e2927d3b&subid=d2efd92a-8faf-4ea1-a187-7fb9e2927d3b&click_id=d2efd92a-8faf-4ea1-a187-7fb9e2927d3b"
  rel="sponsored nofollow noopener"
  style="max-width: 850px;"
  target="_blank"
>
  <img
    alt="Ledger Nano S Plus — Secure your Bitcoin"
    height="420"
    src="https://affiliate.ledger.com/image/850/420/Default"
    style="aspect-ratio: 850 / 420;"
    width="850"
  />
</a>
`;

exports[`Ledger banners · full visual regression matrix (9 sizes × 2 langs) > banner 850x420·tr renders with correct size, alt, src, and tracked href 1`] = `
<a
  aria-label="Ledger Nano S Plus — Bitcoin'ini güvene al"
  data-lang="tr"
  data-size="850x420"
  href="https://shop.ledger.com/pages/ledger-nano-s-plus/?r=8c4e8e87cac7&utm_source=retirement&utm_medium=affiliate&utm_campaign=ledger&utm_content=pre-footer&aff_sid=retirement__pre-footer&sub1=f8aa5ab7-93b0-468b-95f1-0a7abfa1ee10&s1=f8aa5ab7-93b0-468b-95f1-0a7abfa1ee10&subid=f8aa5ab7-93b0-468b-95f1-0a7abfa1ee10&click_id=f8aa5ab7-93b0-468b-95f1-0a7abfa1ee10"
  rel="sponsored nofollow noopener"
  style="max-width: 850px;"
  target="_blank"
>
  <img
    alt="Ledger Nano S Plus — Bitcoin'ini güvene al"
    height="420"
    src="https://affiliate.ledger.com/image/850/420/Turkish"
    style="aspect-ratio: 850 / 420;"
    width="850"
  />
</a>
`;
